# legend-dataflow-hades

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE.md  README.md  Snakefile  config.json  dataflow-config.yaml  pyproject.toml
rules/: common.smk  dsp.smk  hit.smk  raw.smk
scripts/: build_dsp.py  build_hit.py  build_raw.py  complete_run.py  create_dataset.py  create_filelist.py  create_keylist.py  pars_dsp_eopt.py  pars_dsp_tau.py  pars_hit_aoe.py  pars_hit_ecal.py  pars_hit_lq.py  run_aoe_cal.py  run_energy_cal.py  tier0_to_tier1.py  tier1_to_tier2.py  tier2_preprocess_energy.py  tier2_preprocess_energy_combine.py  tier2_preprocess_tau.py  tier2_to_tier3.py  utils.py
scripts/util/: CalibCatalog.py  FileKey.py  __init__.py  patterns.py  utils.py
templates/: config.json
templates/snakemake-config/: job-status-overview.sh  job-status.sh  job-submit-sge.sh  job-wrapper.sh  submit-job-sge.sh
templates/snakemake-config/cluster-sge/: config.yaml  sge-jobscript.sh  sge-status.sh  sge-submit.sh
tests/: test_util.py
workflow/: Snakefile
workflow/rules/: common.smk  dsp.smk  dsp_pars.smk  hit.smk  hit_pars.smk  main.smk  raw.smk
workflow/src/hadesflow/: _version.py
workflow/src/hadesflow/methods/: FileKey.py  __init__.py  paths.py  patterns.py  utils.py
workflow/src/hadesflow/scripts/flow/: build_filelist.py  complete_run.py  write_filelist.py
workflow/src/hadesflow/scripts/tier/: dsp.py  hit.py
workflow/templates/: config.json
