[project]
name = "hades-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspeed==1.3.0a4",
    "legend-daq2lh5==1.2.0a1",
    "legend-pydataobj==1.5.0a5",
    "pulp==2.7.0",
    "pygama==1.6.0a1",
    "pylegendmeta==0.9.0a2",
    "ruff>=0.8.4",
    "snakemake<8",
]
